Hough transform tests + Draw lines method with theta and rho params.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,10 +8,12 @@ Metrics/LineLength:
 Metrics/AbcSize:
   Exclude:
     - "lib/image_processing/hough_transform.rb"
+    - "lib/image_processing/image_refinements.rb"
 
 Metrics/MethodLength:
   Exclude:
     - "lib/image_processing/hough_transform.rb"
+    - "lib/image_processing/image_refinements.rb"
 
 Metrics/ModuleLength:
   Exclude:
